packages/compiler/__tests__/Components/__snapshots__/ast.ts.snap
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tokenize Function call with more { 1`] = `
"

             ^ L0:13-14
             SyntaxError: Expected }"
`;

exports[`tokenize Function call without ending ) 1`] = `
"

 L0:0-0
SyntaxError: Expected tokens )"
`;

exports[`tokenize Function call without ending block } 1`] = `
"

           ^ L0:11-12
           SyntaxError: Unprocessed keyword \\"{\\""
`;

exports[`tokenize Unprocessed keyword 1`] = `
"

^ L0:0-1
SyntaxError: Unprocessed keyword \\"{\\""
`;

exports[`tokenize Unprocessed word keyword 1`] = `
"

^^^^^ L0:0-5
SyntaxError: Unprocessed keyword \\"hello\\""
`;

exports[`tokenize empty token list 1`] = `Array []`;

exports[`tokenize should parse functions 1`] = `
Array [
  AST {
    "source": Object {
      "endCol": 3,
      "endLine": 0,
      "startCol": 0,
      "startLine": 0,
    },
    "tokenOptions": Object {
      "block": Array [],
      "functionName": "abc",
      "parameters": Array [],
    },
    "type": "FUNCTION_CALL",
  },
]
`;

exports[`tokenize should parse functions with block 1`] = `
Array [
  AST {
    "source": Object {
      "endCol": 3,
      "endLine": 0,
      "startCol": 0,
      "startLine": 0,
    },
    "tokenOptions": Object {
      "block": Array [],
      "functionName": "abc",
      "parameters": Array [],
    },
    "type": "FUNCTION_CALL",
  },
]
`;

exports[`tokenize should parse functions with parameter 1`] = `
Array [
  AST {
    "source": Object {
      "endCol": 3,
      "endLine": 0,
      "startCol": 0,
      "startLine": 0,
    },
    "tokenOptions": Object {
      "block": Array [],
      "functionName": "abc",
      "parameters": Array [
        AST {
          "source": Object {
            "endCol": 5,
            "endLine": 0,
            "startCol": 4,
            "startLine": 0,
          },
          "tokenOptions": Object {
            "type": "NUMBER",
            "value": 1,
          },
          "type": "VALUE_LITERAL",
        },
      ],
    },
    "type": "FUNCTION_CALL",
  },
]
`;

exports[`tokenize should parse functions with parameter and block 1`] = `
Array [
  AST {
    "source": Object {
      "endCol": 3,
      "endLine": 0,
      "startCol": 0,
      "startLine": 0,
    },
    "tokenOptions": Object {
      "block": Array [],
      "functionName": "abc",
      "parameters": Array [
        AST {
          "source": Object {
            "endCol": 5,
            "endLine": 0,
            "startCol": 4,
            "startLine": 0,
          },
          "tokenOptions": Object {
            "type": "NUMBER",
            "value": 1,
          },
          "type": "VALUE_LITERAL",
        },
      ],
    },
    "type": "FUNCTION_CALL",
  },
]
`;

exports[`tokenize should parse functions with parameters 1`] = `
Array [
  AST {
    "source": Object {
      "endCol": 3,
      "endLine": 0,
      "startCol": 0,
      "startLine": 0,
    },
    "tokenOptions": Object {
      "block": Array [],
      "functionName": "abc",
      "parameters": Array [
        AST {
          "source": Object {
            "endCol": 6,
            "endLine": 0,
            "startCol": 4,
            "startLine": 0,
          },
          "tokenOptions": Object {
            "index": null,
            "name": "x1",
          },
          "type": "VARIABLE_LITERAL",
        },
        AST {
          "source": Object {
            "endCol": 8,
            "endLine": 0,
            "startCol": 7,
            "startLine": 0,
          },
          "tokenOptions": Object {
            "type": "NUMBER",
            "value": 1,
          },
          "type": "VALUE_LITERAL",
        },
        AST {
          "source": Object {
            "endCol": 10,
            "endLine": 0,
            "startCol": 9,
            "startLine": 0,
          },
          "tokenOptions": Object {
            "type": "NUMBER",
            "value": 2,
          },
          "type": "VALUE_LITERAL",
        },
        AST {
          "source": Object {
            "endCol": 12,
            "endLine": 0,
            "startCol": 11,
            "startLine": 0,
          },
          "tokenOptions": Object {
            "type": "NUMBER",
            "value": 3,
          },
          "type": "VALUE_LITERAL",
        },
      ],
    },
    "type": "FUNCTION_CALL",
  },
]
`;

exports[`tokenize should parse functions with parameters and block 1`] = `
Array [
  AST {
    "source": Object {
      "endCol": 3,
      "endLine": 0,
      "startCol": 0,
      "startLine": 0,
    },
    "tokenOptions": Object {
      "block": Array [
        AST {
          "source": Object {
            "endCol": 4,
            "endLine": 1,
            "startCol": 2,
            "startLine": 1,
          },
          "tokenOptions": Object {
            "block": Array [],
            "functionName": "abc",
            "parameters": Array [],
          },
          "type": "FUNCTION_CALL",
        },
      ],
      "functionName": "abc",
      "parameters": Array [
        AST {
          "source": Object {
            "endCol": 5,
            "endLine": 0,
            "startCol": 4,
            "startLine": 0,
          },
          "tokenOptions": Object {
            "index": null,
            "name": "x1",
          },
          "type": "VARIABLE_LITERAL",
        },
        AST {
          "source": Object {
            "endCol": 8,
            "endLine": 0,
            "startCol": 7,
            "startLine": 0,
          },
          "tokenOptions": Object {
            "type": "NUMBER",
            "value": 1,
          },
          "type": "VALUE_LITERAL",
        },
        AST {
          "source": Object {
            "endCol": 10,
            "endLine": 0,
            "startCol": 9,
            "startLine": 0,
          },
          "tokenOptions": Object {
            "type": "NUMBER",
            "value": 2,
          },
          "type": "VALUE_LITERAL",
        },
        AST {
          "source": Object {
            "endCol": 12,
            "endLine": 0,
            "startCol": 11,
            "startLine": 0,
          },
          "tokenOptions": Object {
            "type": "NUMBER",
            "value": 3,
          },
          "type": "VALUE_LITERAL",
        },
      ],
    },
    "type": "FUNCTION_CALL",
  },
]
`;

exports[`tokenize should parse functions with parameters and nested blocks 1`] = `
Array [
  AST {
    "source": Object {
      "endCol": 3,
      "endLine": 0,
      "startCol": 0,
      "startLine": 0,
    },
    "tokenOptions": Object {
      "block": Array [
        AST {
          "source": Object {
            "endCol": 10,
            "endLine": 1,
            "startCol": 7,
            "startLine": 1,
          },
          "tokenOptions": Object {
            "block": Array [
              AST {
                "source": Object {
                  "endCol": 12,
                  "endLine": 2,
                  "startCol": 9,
                  "startLine": 2,
                },
                "tokenOptions": Object {
                  "block": Array [
                    AST {
                      "source": Object {
                        "endCol": 14,
                        "endLine": 3,
                        "startCol": 11,
                        "startLine": 3,
                      },
                      "tokenOptions": Object {
                        "block": Array [],
                        "functionName": "abc",
                        "parameters": Array [],
                      },
                      "type": "FUNCTION_CALL",
                    },
                  ],
                  "functionName": "def",
                  "parameters": Array [
                    AST {
                      "source": Object {
                        "endCol": 14,
                        "endLine": 2,
                        "startCol": 13,
                        "startLine": 2,
                      },
                      "tokenOptions": Object {
                        "type": "NUMBER",
                        "value": 1,
                      },
                      "type": "VALUE_LITERAL",
                    },
                    AST {
                      "source": Object {
                        "endCol": 16,
                        "endLine": 2,
                        "startCol": 15,
                        "startLine": 2,
                      },
                      "tokenOptions": Object {
                        "type": "NUMBER",
                        "value": 2,
                      },
                      "type": "VALUE_LITERAL",
                    },
                  ],
                },
                "type": "FUNCTION_CALL",
              },
            ],
            "functionName": "abc",
            "parameters": Array [],
          },
          "type": "FUNCTION_CALL",
        },
      ],
      "functionName": "abc",
      "parameters": Array [
        AST {
          "source": Object {
            "endCol": 6,
            "endLine": 0,
            "startCol": 4,
            "startLine": 0,
          },
          "tokenOptions": Object {
            "index": null,
            "name": "x1",
          },
          "type": "VARIABLE_LITERAL",
        },
        AST {
          "source": Object {
            "endCol": 8,
            "endLine": 0,
            "startCol": 7,
            "startLine": 0,
          },
          "tokenOptions": Object {
            "type": "NUMBER",
            "value": 1,
          },
          "type": "VALUE_LITERAL",
        },
        AST {
          "source": Object {
            "endCol": 10,
            "endLine": 0,
            "startCol": 9,
            "startLine": 0,
          },
          "tokenOptions": Object {
            "type": "NUMBER",
            "value": 2,
          },
          "type": "VALUE_LITERAL",
        },
        AST {
          "source": Object {
            "endCol": 12,
            "endLine": 0,
            "startCol": 11,
            "startLine": 0,
          },
          "tokenOptions": Object {
            "type": "NUMBER",
            "value": 3,
          },
          "type": "VALUE_LITERAL",
        },
      ],
    },
    "type": "FUNCTION_CALL",
  },
]
`;

exports[`tokenize tokenize two variables 1`] = `
Array [
  AST {
    "source": Object {
      "endCol": 3,
      "endLine": 0,
      "startCol": 0,
      "startLine": 0,
    },
    "tokenOptions": Object {
      "type": "abc",
      "value": AST {
        "source": Object {
          "endCol": 9,
          "endLine": 0,
          "startCol": 8,
          "startLine": 0,
        },
        "tokenOptions": Object {
          "type": "NUMBER",
          "value": 0,
        },
        "type": "VALUE_LITERAL",
      },
      "variableName": "i",
      "variableOptions": null,
    },
    "type": "DECLARATION",
  },
  AST {
    "source": Object {
      "endCol": 3,
      "endLine": 1,
      "startCol": 0,
      "startLine": 1,
    },
    "tokenOptions": Object {
      "type": "int",
      "value": AST {
        "source": Object {
          "endCol": 9,
          "endLine": 1,
          "startCol": 8,
          "startLine": 1,
        },
        "tokenOptions": Object {
          "type": "NUMBER",
          "value": 1,
        },
        "type": "VALUE_LITERAL",
      },
      "variableName": "j",
      "variableOptions": null,
    },
    "type": "DECLARATION",
  },
]
`;
